# Typo-Language-Fixer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: CMakeLibTemplateConfig.cmake.in  TypeLangFixerConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
include/: language_fixer.hpp  map_tables.hpp  types.hpp
scripts/: create_shortcut.bat
source/: clipboard.cpp  detector.cpp  language_fixer.cpp
tests/: CMakeLists.txt  test_detector.cpp  test_lang_fixer.cpp
